@@ -1,3 +1,9 @@
+2009-01-24  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Dialog_Partition_Copy.cc,
+	  src/Win_GParted.cc: Enhanced copy/paste checks when MBR/EBR involved.
+	  - Related to GParted bug #567402
+
 2009-01-20  Curtis Gedak  <gedakc@gmail.com>
 
 	* doc/gparted.8: Updated manual page.
